--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "convert-array-to-csv": "^2.0.0",
     "csv-parse": "^5.5.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
